--- a/src/css/main.css
+++ b/src/css/main.css
@@ -174,6 +174,17 @@ h6 {
   overflow-y: scroll;
 }
 
+.booking-container {
+  padding: 5%;
+  background: #FAFAFA;
+  height: 93vh;
+  overflow-y: scroll;
+}
+
+.result-container {
+  padding: 30%;
+}
+
 .item3 {
   grid-row: 1/1 span;
 }
@@ -428,6 +439,7 @@ h6 {
 #dateIn #dateOut {
   float: left;
 }
+
 
 .printButton {
   background: #D7E8F7;
